{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 393,
  "lineage": "61947791-3344-a67a-1172-e7bfd3ee4175",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09c5e030f74651050",
            "arn": "arn:aws:ec2:us-west-2:759043922016:instance/i-09082b1a71b58c3cb",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09082b1a71b58c3cb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "publicKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0791b9f9fe318c210",
            "private_dns": "ip-10-1-0-104.us-west-2.compute.internal",
            "private_ip": "10.1.0.104",
            "public_dns": "ec2-54-185-42-143.us-west-2.compute.amazonaws.com",
            "public_ip": "54.185.42.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-043fff478781d3b9b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd841770a2cd2198",
            "tags": {
              "Environment": "Demo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04c52ceb43bb2b371"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2key",
            "aws_security_group.sg_22",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:759043922016:internet-gateway/igw-097166351dc2e67d8",
            "id": "igw-097166351dc2e67d8",
            "owner_id": "759043922016",
            "tags": {
              "Environment": "Demo"
            },
            "vpc_id": "vpc-087ea61db9af1d9d6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0286ad1bd01ec40f3",
            "owner_id": "759043922016",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097166351dc2e67d8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Demo"
            },
            "vpc_id": "vpc-087ea61db9af1d9d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09edd194c9619e89e",
            "route_table_id": "rtb-0286ad1bd01ec40f3",
            "subnet_id": "subnet-0cd841770a2cd2198"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:759043922016:security-group/sg-04c52ceb43bb2b371",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c52ceb43bb2b371",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_22",
            "name_prefix": "",
            "owner_id": "759043922016",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-087ea61db9af1d9d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:759043922016:subnet/subnet-0cd841770a2cd2198",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0cd841770a2cd2198",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "759043922016",
            "tags": {
              "Environment": "Demo"
            },
            "vpc_id": "vpc-087ea61db9af1d9d6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:759043922016:vpc/vpc-087ea61db9af1d9d6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-064ea71f74e3b8dfc",
            "default_route_table_id": "rtb-077699cd74d93948a",
            "default_security_group_id": "sg-0a11ecfaeca4b74cf",
            "dhcp_options_id": "dopt-ec63ac94",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-087ea61db9af1d9d6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-077699cd74d93948a",
            "owner_id": "759043922016",
            "tags": {
              "Environment": "Demo"
            }
          }
        }
      ]
    }
  ]
}